<resources>
    <string name="app_name">Θα προτιμούσες</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Ονομα χρήστη</string>
    <string name="prompt_password">Κωδικός</string>
    <string name="action_sign_in">Σύνδεση</string>
    <string name="action_register">Εγγραφή</string>
    <string name="action_sign_in_short">Σύνδεση</string>
    <string name="error_invalid_email">Η διεύθυνση email δεν είναι έγγυρη</string>
    <string name="error_invalid_password">Ο κωδικός είναι πολύ μικρός</string>
    <string name="error_incorrect_password">Λάθος κωδικός</string>
    <string name="error_field_required">Αυτό το πεδίο είναι υποχρεωτικό</string>
    <string name="error_incorrect_username_or_password">Λάθος όνομα χρήστη ή κωδικός</string>
    <string name="general_error">Κάτι πήγε στραβά</string>
    <string name="permission_rationale">"Η άδεια επαφών χρησιμοποιείται στην αυτόματη συμπλήρωση email."
    </string>
    <string name="title_activity_register">Εγγραφή</string>
    <string name="action_offline">Συνεχεια χωρίς εγγραφή</string>
    <string name="action_bar">Θα προτιμούσες...</string>
    <string name="choice">Επιλογή 1</string>
    <string name="choice2">Επιλογή 2</string>
    <string name="submit">Υποβολή</string>
    <string name="or">ή</string>
    <string name="gender_choice">Επιλέξτε φύλο</string>
    <string name="gender_male">Άνδρας</string>
    <string name="gender_female">Γυναίκα</string>
    <string name="gender_other">Άλλο</string>
    <string name="insert_comment">Εισαγωγή σχολίου</string>
    <string name="username_error">Συμπληρώστε το Ονομα Χρήστη</string>
    <string name="password_error">Συμπληρώστε τον Κωδικό Πρόσβασης</string>
    <string name="email_error">Συμπληρώστε το Email</string>
    <string name="internet">Δεν έχετε πρόσβαση στο Internet</string>
    <string name="register_success">Επιτυχής εγγραφή!</string>

    <string name="title_activity_test">test</string>
    <string name="title_section1">Section 1</string>

    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="error_no_password">Παρακαλώ εισάγετε κωδικό</string>

    <string name="please_wait">Παρακαλώ περιμένετε</string>
    <string name="server_url">https://panafana.duckdns.org/</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Non Binary</item>
    </string-array>
    <string-array name="categories">
        <item>Γενικές</item>
        <item>Αστείες</item>
        <item>Δύσκολες</item>
        <item>Για ζευγάρια</item>
        <item>Αηδιαστικές</item>
        <!-- <item>Ανησυχητικές</item>
        <item>Αηδιαστικές</item>-->
    </string-array>
</resources>
